--- a/nginx-php-proxy-ssl/docker-compose.yaml
+++ b/nginx-php-proxy-ssl/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       - ./certs:/etc/nginx/certs:ro
       - /etc/nginx/vhost.d
       - /usr/share/nginx/html
+    networks:
+      - mynetwork
     restart: always
 
   letsencrypt-companion:
@@ -22,6 +24,8 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     volumes_from:
       - nginx-proxy:rw
+    networks:
+      - mynetwork
     restart: always
 
   web-site1:
@@ -32,6 +36,8 @@ services:
     volumes:
       - ./src-site1:/var/www/html
       - ./default-site1.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - mynetwork
     restart: always
 
   php-fpm-site1:
@@ -39,6 +45,8 @@ services:
     container_name: php-fpm-site1
     volumes:
       - ./src-site1:/var/www/html
+    networks:
+      - mynetwork
     restart: always
 
   web-site2:
@@ -51,6 +59,8 @@ services:
     volumes:
       - ./src-site2:/var/www/html
       - ./default-site2.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - mynetwork
     restart: always
 
   php-fpm-site2:
@@ -58,4 +68,10 @@ services:
     container_name: php-fpm-site2
     volumes:
       - ./src-site2:/var/www/html
+    networks:
+      - mynetwork
     restart: always
+
+networks:
+  mynetwork:
+    driver: bridge
