--- a/nginx-proxy-ssl-php/docker-compose.yaml
+++ b/nginx-proxy-ssl-php/docker-compose.yaml
@@ -33,6 +33,8 @@ services:
     container_name: site1-nginx
     environment:
       VIRTUAL_HOST: site1.domain.com
+      LETSENCRYPT_HOST: site1.domain.com
+      LETSENCRYPT_EMAIL: name@domain.com
     volumes:
       - ./site1:/var/www/html
       - ./default-site1.conf:/etc/nginx/conf.d/default.conf
